--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
 
         <li ng-repeat="calculation in calculationList" >
-            Марка
-            <br/>Модель
+            <div ng-click="selectCalculation($index)">{{calculation.car.markName}}
+            <br/>{{calculation.car.modelName}}
             <br/>11111 руб/мес.
-
+            </div>
             <a href="" ng-click="copyCalculation($index)" >копировать</a>
             <a href="" ng-click="delCalculation($index)" >удалить</a>
         </li>
@@ -79,30 +79,26 @@
                 ng-options="mark.id as mark.name for mark in selMarkList"
                 ng-change="updateModel()"
                 >
-            <option value="">Любая</option>
         </select><!--Марка-->
         <select ng-model="car.modelId"
                 ng-options="model.id as model.name for model in selModelList"
                 ng-change="updatePackaging()"
                 >
-            <option value="">Любая</option>
         </select><!--Модель-->
         <select ng-model="car.packagingId"
                 ng-options="pack.id as pack.name for pack in selPackagingList"
                 ng-change="updateYear()"
                 >
-            <option value="">Любая</option>
         </select><!--Комплектация-->
         <select ng-model="car.yearId"
                 ng-options="year.yearId as year.yearId for year in selYearList"
                 >
-            <option value="">Любой</option>
         </select><!--Год-->
     </section>
 
 
     <section class="car-search" ng-show="!isCatalog" ng-controller="CarSearchCtrl">
-        <div slider></div>
+        <div slider ng-model="searchPrice" max="10000000" step="100000" ></div><input type="number" ng-model="searchPrice">
         <!--сумма-->
         <select ng-model="car.markId"
                 ng-options="mark.id as mark.name for mark in selMarkList"
@@ -126,8 +122,8 @@
             <ul>
                 <li ng-repeat="selCar in selCars">
                     <div>
-                        <h4>car1</h4>
-                        <span>32 000 руб</span>
+                        <h4>{{selCar.markName}} {{selCar.modelName}}</h4>
+                        <span>{{selCar.price}}</span>
                     </div>
                 </li>
             </ul>
