search car select added

--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
     </section>
 
     <div class="price-line">
-        <h3>Машина</h3>
+        <h3>{{calculation.car.markName}} {{calculation.car.modelName}}</h3>
 
-        <div class="price">560 000 руб</div>
+        <div class="price">{{calculation.car.price}} руб</div>
         <a class="toggler"></a>
     </div>
 
