--- a/index.html
+++ b/index.html
@@ -13,19 +13,14 @@
     <link href="css/print.css" rel="stylesheet" media="print">
 
 
-    <style>
-        body {
-            padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-        }
-    </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 </head>
 
 <body ng-controller="CalculatorCtrl">
-
+<aside>
 <nav>
-    <img>
+    <img src="img/logo.png">
     <ul>
 
         <li>
@@ -36,16 +31,18 @@
                 <dt>max кредит</dt>
                 <dd>{{maxCreditValue}} руб.</dd>
             </dl>
+            <i></i>
         </li>
 
 
-        <li ng-repeat="calculation in calculationList" >
+        <li ng-repeat="calculation in calculationList" class="active">
             <div ng-click="selectCalculation($index)">{{calculation.car.markName}}
             <br/>{{calculation.car.modelName}}
             <br/>11111 руб/мес.
             </div>
             <a href="" ng-click="copyCalculation($index)" >копировать</a>
             <a href="" ng-click="delCalculation($index)" >удалить</a>
+            <i></i>
         </li>
 
         <li>
@@ -54,12 +51,13 @@
 
         <li>
             <a href="">Сравнение</a>
+            <i></i>
         </li>
     </ul>
 </nav>
+</aside>
 
-
-<div>
+<div class="content-container">
 <article></article>
 <!--расчет платежноспобности-->
 
@@ -68,11 +66,11 @@
 <section class="car-choose" ng-controller="CarConfigurationCtrl" >
     <h2>Автомобиль</h2>
 
-    <a href="" class="btn ng-class: {'active': !car.used}" ng-click="car.used=false;updateMark()">Новый</a>
-    <a href="" class="btn ng-class: {'active': car.used}" ng-click="car.used=true;updateMark()">С пробегом</a>
+    <a href="" class="radio-btn ng-class: {'active': !car.used}" ng-click="car.used=false;updateMark()">Новый</a>
+    <a href="" class="radio-btn ng-class: {'active': car.used}" ng-click="car.used=true;updateMark()">С пробегом</a>
 
-    <a href="" ng-click="isCatalog=true">Каталог</a>
-    <a href="" ng-click="isCatalog=false">Поиск</a>
+    <a href="" class="radio-btn" ng-click="isCatalog=true">Каталог</a>
+    <a href="" class="radio-btn" ng-click="isCatalog=false">Поиск</a>
 
     <section class="car-catalog" ng-show="isCatalog">
         <select ng-model="car.markId"
