--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <input>
         </div>
 
-        <div class="span4">
+        <div class="span4 client-options">
             <a class="radio-btn  ng-class: {'active': clientRCI}" ng-click="clientRCI=!clientRCI">Клиент RCI</a>
             <a class="radio-btn  ng-class: {'active': existCRM}" ng-click="existCRM=!existCRM">Есть в CRM</a>
         </div>
