search car search by mark & model implemented

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <ul>
                 <li ng-repeat="selCar in selCars">
                     <div ng-click="selectCar($index)">
-                        <h4>{{selCar.markName}} {{selCar.modelName}}</h4>
-                        <span>{{selCar.price}}</span>
+                        <h4>{{selCar.name}}</h4>
+                        <span>{{selCar.cost}}</span>
                     </div>
                 </li>
             </ul>
