--- a/index.html
+++ b/index.html
@@ -454,7 +454,15 @@
 <script type="text/javascript" src="js/angular-ui/bootstrap/ui-bootstrap-tpls-0.4.0-SNAPSHOT.min.js"></script>
 
 <script type="text/javascript" src="js/app/app.js"></script>
-<script type="text/javascript" src="js/app/controllers.js"></script>
+
+<script type="text/javascript" src="js/app/controllers/CalculatorCtrl.js"></script>
+<script type="text/javascript" src="js/app/controllers/CarConfigurationCtrl.js"></script>
+<script type="text/javascript" src="js/app/controllers/CarSearchCtrl.js"></script>
+<script type="text/javascript" src="js/app/controllers/LoanProgramSelectionCtrl.js"></script>
+<script type="text/javascript" src="js/app/controllers/MaxPaymentCtrl.js"></script>
+<script type="text/javascript" src="js/app/controllers/OfferCtrl.js"></script>
+<script type="text/javascript" src="js/app/controllers/UpgradeCtrl.js"></script>
+
 <script type="text/javascript" src="js/app/directives.js"></script>
 <script type="text/javascript" src="js/app/services.js"></script>
 
